installr 0.17.5 (2016-03-20)
---------------------------
BUG FIXES:
   * install.R() - can now deal with a file name such as "R-3.2.4revised-win.exe"


installr 0.17.4 (2016-03-19)
---------------------------
BUG FIXES:
   * URL: http://cran.rstudio.com (moved to https://cran.rstudio.com/)



installr 0.17.3 (2016-03-18)
---------------------------

OTHER NOTES:
   * Added stringr and curl as imports to the package (so things would be easier to maintain)
   
UPDATED FUNCTIONS:
   * install.URL now uses curl::curl_download instead of download.file (this deals with issues in sourceforge)
   
BUG FIXES:
   * install.npptor - works again
   * updateR - can now deal with a file name such as "R-3.2.4revised-win.exe"



installr 0.17.2 (2016-02-12)
---------------------------

UPDATED FUNCTIONS:
   * updateR: to_checkMD5sums - now set to FALSE by default (it keeps throwing errors...)


installr 0.17.1 (2015-11-08)
---------------------------

BUG FIXES:
   * install.git() - works again



installr 0.17.0 (2015-09-11)
---------------------------

UPDATED FUNCTIONS:
   * updateR - new parameters added:
      *  setInternet2 - so people would not have the error: "Error in file(con, "r") : cannot open the connection"
      *  fast - overrides other parameters, so to make the installation as fast as possible for the user: no news, installr R, copy packages and Rprofile, keep
old packages, updated packages, without quiting current R or starting the new R.
don't use GUI, check MD5sums, keep installed file in the getwd.
      * The default parameters in "fast" are set to make it easier to update R (on Windows) for people who are blind. (thanks to Jonathan Godfrey)
      
   
OTHER NOTES:
   * Updated troubleshooting in the README.
   * rename use_GUI to GUI.

installr 0.16.0 (2015-06-11)
---------------------------

UPDATED FUNCTIONS:
   * R_version_in_a_folder - now returns NULL if no folder was found.