@@ -1,5 +1,9 @@
 installr 0.17.5 (2016-03-20)
 ---------------------------
+
+UPDATED FUNCTIONS:
+   * install.URL now uses download.file again, but gained an option download_fun for using curl::curl_download (for install.npptor)
+
 BUG FIXES:
    * install.R() - can now deal with a file name such as "R-3.2.4revised-win.exe"
 
